--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h1 {
 }
 
 .field-box {
+   position: relative;
    border: 2px solid #d0d0d0;
    float: left;
 }
@@ -88,4 +89,46 @@ h1 {
 .cl {
    clear: both;
    display: block;
+}
+
+.popup {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   display: none;
+   justify-content: center;
+   align-items: center;
+   background-color: rgba(0, 0, 0, 0.3);
+   z-index: 999;
+}
+
+.popup__content {
+   background-color: white;
+   opacity: 1;
+   width: 450px;
+   height: 250px;
+   display: flex;
+   flex-direction: column;
+   padding: 20px;
+   border-radius: 12px;
+}
+
+.popup__title {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   color: #000000;
+   flex-grow: 1;
+}
+
+.popup__btn {
+   width: 150px;
+   height: 35px;
+   border: 2px solid #000000;
+   border-radius: 30px;
+   cursor: pointer;
+   align-self: flex-end;
 }
